--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@
     height: 100%;
     position: absolute;
     top: 0;left: 0;
-    background: url(https://cdn.discordapp.com/attachments/865268213780709376/866726970406076456/595306-Among-Trees-Early-Access-review.jpg) center no-repeat;
+    background: url(https://www.chiens-de-france.com/photo/eleveurs/18/3467/presentations/2a87868e-bfa7-2bb4-79d0-67bc5bfa2a17_min.jpg) center no-repeat;
     background-size: cover;
     z-index: 1;
     opacity: 0.5;
