--- a/css/footer.css
+++ b/css/footer.css
@@ -6,5 +6,13 @@
     color: #fff;
     padding: 5px;
     width: 100%;
-    float: left;
-}
+    float: left;}
+
+.footer[data-v-c67a996a] {
+    color: #ebebeb;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background: #101010;
+    display: flex;
+    flex-direction: column;
+    align-items: center;}
