--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,7 @@
     height: 100%;
     position: absolute;
     top: 0;left: 0;
-    background: url(https://cdn.discordapp.com/attachments/557305648006823956/918775639132233738/received_269837588478433.jpeg) center no-repeat;
+    background: url(https://cdn.discordapp.com/attachments/557305648006823956/918777395178258432/fond.png) center no-repeat;
     background-size: cover;
     z-index: 1;
     opacity: 0.5;
