--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,19 @@
     top: 50%;
     transform: translateY(-50%);
 }
+.burger span::before, .burger span::after{
+    content '';
+    width: 100%;
+    height: 4px;
+    background-color: #0E0E0E;
+    position: absolute;
+}
+.burger span::before{
+    
+}
+.burger span::after{
+    
+}
 
 .header {
     height: 720px;
