--- a/css/header.css
+++ b/css/header.css
@@ -136,11 +136,10 @@
 
 }
 
-@media only screen and (max-width: 670px){
     .container {
         width: 100%;
         padding: 0 20px;
-    }
+}
 
     .header__navbar--toggle {
         width: 40px;
@@ -164,15 +163,15 @@
     
     .header__navbar--menu {
         transition: all 0.3s ease-in-out;
-        transform: translateY(-100%);
+        transform: translateX(-100%);
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: absolute;
-        width: 100%;
-        height: 50vh;
-        background: #f39c12;
+        width: 15%;
+        height: 100vh;
+        background: #0E0E0E;
         top: 0;left: 0;
     }
     .header__navbar--menu-link {
