--- a/css/header.css
+++ b/css/header.css
@@ -170,7 +170,7 @@
         align-items: center;
         position: absolute;
         width: 15%;
-        height: 100vh;
+        height: 720px;
         background: #0E0E0E;
         top: 0;left: 0;
     }
