--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,29 @@
-
+.sidebar{
+  position: fixed;
+  width: 250px;
+  height : 100%;
+  left: 0;
+  background: #000;
+}
+.sidebar .text{
+  color: white;
+  font-size: 25 px;
+  font-weight: 600;
+  line-height: 65px;
+  text-align: center;
+  background: #000;
+  letter-spacing: 1 px;
+}
+nav ul{
+  background: #000;
+  height: 100%;
+  width: 100%;
+  list-style: none;
+}
+nav ul li{
+  line-height: 60px;
+  border-bottom: 1 px solid rgba(255,255,255,0.1);
+}
+nav ul li a{
+  color: white;
+}
