--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ nav ul li a{
   font-weight: 500;
   display: block;
   width: 100%;
-  border-left: 3px solid transparent:
+  border-left: 5px solid transparen;
 }
 nav ul li a:hover{
   color: cyan;
