--- a/css/test.css
+++ b/css/test.css
@@ -9,7 +9,7 @@
 .btn{
   position: absolute;
   top: 15px;
-  left: 45px;
+  left: 15px;
   height: 45px;
   width: 45px;
   text-align: center;
@@ -19,7 +19,7 @@
   transition: left 0.4s ease;
 }
 .btn.click{
-  left: 260px;
+  left: 265px;
 }
 .btn span{
   color: white;
@@ -50,76 +50,31 @@
   letter-spacing: 1px;
 }
 nav ul{
-  background: #1b1b1b;
+  background: #000;
   height: 100%;
   width: 100%;
   list-style: none;
 }
 nav ul li{
   line-height: 60px;
-  border-top: 1px solid rgba(255,255,255,0.1);
-}
-nav ul li:last-child{
-  border-bottom: 1px solid rgba(255,255,255,0.05);
+  border-bottom: 1 px solid rgba(255,255,255,0.1);
 }
 nav ul li a{
-  position: relative;
   color: white;
   text-decoration: none;
   font-size: 18px;
-  padding-left: 40px;
+  padding-left: 20px;
   font-weight: 500;
   display: block;
   width: 100%;
-  border-left: 3px solid transparent;
-}
-nav ul li.active a{
-  color: cyan;
-  background: #1e1e1e;
-  border-left-color: cyan;
+  border-left: 10px solid transparent;
 }
 nav ul li a:hover{
-  background: #1e1e1e;
+  color: white;
+  background: #050505;
+  border-left-color: cyan;
 }
-nav ul ul{
-  position: static;
-  display: none;
-}
-nav ul .feat-show.show{
-  display: block;
-}
-nav ul .serv-show.show1{
-  display: block;
-}
-nav ul ul li{
-  line-height: 42px;
-  border-top: none;
-}
-nav ul ul li a{
-  font-size: 17px;
-  color: #e6e6e6;
-  padding-left: 80px;
-}
-nav ul li.active ul li a{
-  color: #e6e6e6;
-  background: #1b1b1b;
-  border-left-color: transparent;
-}
-nav ul ul li a:hover{
-  color: cyan!important;
-  background: #1e1e1e!important;
-}
-nav ul li a span{
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  transform: translateY(-50%);
-  font-size: 22px;
-  transition: transform 0.4s;
-}
-nav ul li a span.rotate{
-  transform: translateY(-50%) rotate(-180deg);
-}
+
 .content{
   position: absolute;
   top: 50%;
