--- a/css/test.css
+++ b/css/test.css
@@ -75,20 +75,82 @@ nav ul li a:hover{
   border-left-color: #91D1D3;
 }
 
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  color: #202020;
-  z-index: -1;
-  text-align: center;
+.header__texture {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: url(https://cdn.discordapp.com/attachments/557305648006823956/918777395178258432/fond.png) center no-repeat;
+    background-size: cover;
+    z-index: -1;
+    opacity: 0.9;
 }
-.content .header{
-  font-size: 45px;
-  font-weight: 600;
+.wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(../img/wave.png);
+    background-size: 1000px 100px;
+    z-index: -1;
 }
-.content p{
-  font-size: 30px;
-  font-weight: 500;
+
+.wave.wave1 {
+    animation: animate3 30s linear infinite;
+    z-index: 900;
+    opacity: 1;
+    animation-delay: 0s;
+    bottom: 0;
+}
+
+.wave.wave2 {
+    animation: animate2 15s linear infinite;
+    z-index: 899;
+    opacity: 0.5;
+    animation-delay: -5s;
+    bottom: 10px;
+}
+
+.wave.wave3 {
+    animation: animate2 30s linear infinite;
+    z-index: 898;
+    opacity: 0.2;
+    animation-delay: -2s;
+    bottom: 15;
+}
+
+.wave.wave4 {
+    animation: animate2 5s linear infinite;
+    z-index: 897;
+    opacity: 0.7;
+    animation-delay: -5s;
+    bottom: 20px;
+}
+
+@keyframes animate3 {
+    0%
+    {
+        background-position-x: 0;
+
+    }
+    100%
+    {
+        background-position-x: 1000px;
+        
+    }
+}
+
+@keyframes animate2 {
+    0%
+    {
+        background-position-x: 0;
+
+    }
+    100%
+    {
+        background-position-x: -1000px;
+        
+    }
 }
