--- a/css/test.css
+++ b/css/test.css
@@ -158,6 +158,31 @@ div.logo {
   text-align: center;
 }
 img{
-  width: 35%;
+  width: 75vh;
   margin-top: 15px;
+}
+footer{
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  background: #111;
+  z-index: -1;
+}
+
+.bottom center span{
+  color: #656565;
+}
+
+@media screen and (max-width: 900px) {
+  footer{
+    position: relative;
+    bottom: 0px;
+  }
+  .main-content{
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .main-content .box{
+    margin: 5px 0;
+  }
 }
