--- a/css/test.css
+++ b/css/test.css
@@ -7,7 +7,7 @@
   font-family: 'Poppins', sans-serif;
 }
 .btn{
-  position: absolute;
+  position: fixed;
   top: 15px;
   left: 15px;
   height: 45px;
@@ -161,13 +161,7 @@ img{
   width: 75vh;
   margin-top: 15px;
 }
-footer{
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  background: #111;
-  z-index: -1;
-}
+
 
 .bottom center span{
   color: #656565;
@@ -185,4 +179,32 @@ footer{
   .main-content .box{
     margin: 5px 0;
   }
+}
+.header {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+.main-content-top {
+    color: #151515;
+    background-color: #EEE6D1;
+    padding: 20px;
+    position: relative;
+    z-index: -1;
+}
+.container {
+    width: 90%;
+    margin: auto;
+    position: relative;
+    z-index: 999;
+}
+.bottom{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #111;
+  padding: 3px;
+  width: 100%;
+  float: left;
 }
