--- a/css/chiots.css
+++ b/css/chiots.css
@@ -6,3 +6,20 @@ nav{
   padding-left: 10%;
   padding-right: 10%;
 }
+
+nav ul li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 10px 20px;
+}
+
+nav ul li a{
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover{
+  color: blue;
+  transition: .3s;
+}
